Fix Icon Spacing

--- a/portfolio/src/app/componenets/info/info.component.css
+++ b/portfolio/src/app/componenets/info/info.component.css
@@ -67,9 +67,10 @@
 .contact-button-light {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
     cursor: pointer;
+    padding-left: 1.35rem;
     font-size: 1.7rem;
     width: 13rem;
     height: 4rem;
@@ -137,9 +138,10 @@
 .contact-button-dark {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
     cursor: pointer;
+    padding-left: 1.35rem;
     font-size: 1.7rem;
     width: 13rem;
     height: 4rem;
@@ -204,16 +206,21 @@
         width: 11rem;
         height: 3.5rem;
         font-size: 1.3rem;
+        padding-left: 0;
+        justify-content: center;
     }
     .contact-button-dark {
         width: 11rem;
         height: 3.5rem;
         font-size: 1.3rem;
+        padding-left: 0;
+        justify-content: center;
     }
 
     .info-icon {
         width: 24px;
         height: 24px;
+        margin-right: 0.75rem;
     }
 
 }
